Frame labels are invisible with default theme #38643

Closed
opened 2014-02-15 10:03:14 +01:00 by gandalf3 · 9 comments
Member

System Information
Archlinux
Nvidia GTX 460

Blender Version
Broken: c7ac0ed
Worked: 2.69 release

Short description of error
Frame node labels are invisible with default theme.

Exact steps for others to reproduce the error

  1. Load factory settings
  2. Add a frame node
  3. Change the label (nothing seems to appear on the frame node)
  4. Change the color of the node. The label text will be revealed.
**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: c7ac0ed Worked: 2.69 release **Short description of error** Frame node labels are invisible with default theme. **Exact steps for others to reproduce the error** 1. Load factory settings 2. Add a frame node 3. Change the label (nothing seems to appear on the frame node) 4. Change the color of the node. The label text will be revealed.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Lukas Tönne was assigned by Sergey Sharybin 2014-02-17 08:37:32 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Node editor goes to you :)

Node editor goes to you :)

This issue was referenced by blender/blender-addons-contrib@80f3956972

This issue was referenced by blender/blender-addons-contrib@80f3956972aad9822ff9d751578ee3d984eb3bec

This issue was referenced by 80f3956972

This issue was referenced by 80f3956972aad9822ff9d751578ee3d984eb3bec
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 80f3956972.

Closed by commit 80f3956972.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38643
No description provided.