Fix T38643: Frame labels are invisible with default theme.

The color for frame labels was a mix of the text color (black by
default) and the node theme color with a factor of 0.8, which
coincidentally is the same as the node body color.

Changed it to 0.4, which is the same as the regular node labels use.